--- a/RadhikaTravels/src/RadhikaTravels.css
+++ b/RadhikaTravels/src/RadhikaTravels.css
@@ -39,7 +39,7 @@ img {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 .navbar-spacing {
-  height: 70px; /* or whatever your navbar height is */
+  height: 70px; 
 }
 
 
